Optimized CSS for user experience; Fixed grids going out of container; Added input form for number of pixels

--- a/style.css
+++ b/style.css
@@ -4,14 +4,42 @@
     padding: 0;
 }
 
+header {
+    height: 100%;
+    margin: 0;
+    padding: 1rem;
+    text-align: center;
+    justify-content: center;
+}
+
+#header-col-1 {
+    padding: 5px;
+}
+
+#header-col-3 {
+    padding-top: 8px;
+}
+
 #container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#text-multiplier {
+    text-align: center;
+}
+
+#container-draw {
     display: grid;
-    grid-template-columns: repeat(16, auto);
-    grid-template-rows: repeat(16, auto);
-    width: 100vw;
+    width: 500px;
+    height: 500px;
+    border: 50px solid red;
+    grid-template-columns: repeat(16, 1fr);
+    grid-template-rows: repeat(16, 1fr);
 }
 
 .draw {
     background-color: white;
-    padding: 20px;
 }
